--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,17 @@
     }
   ],
   "require": {
-    "yiisoft/yii2": "~2.0.0"
+    "yiisoft/yii2": "~2.0.5"
   },
   "autoload": {
     "psr-4": {
       "yiisolutions\\migrations\\": "src/"
     }
-  }
+  },
+  "repositories": [
+    {
+      "type": "composer",
+      "url": "https://asset-packagist.org"
+    }
+  ]
 }
