--- a/composer.json
+++ b/composer.json
@@ -1,31 +1,37 @@
 {
-  "name": "yiisolutions/yii2-migrations-advanced",
-  "type": "yii2-extension",
-  "description": "Advanced migrations for Yii2",
-  "keywords": ["yii2", "migrations", "database", "db", "migrate"],
-  "license": "BSD-3-Clause",
-  "support": {
-    "issues": "https://github.com/yiisolutions/yii2-migrations-advanced/issues",
-    "source": "https://github.com/yiisolutions/yii2-migrations-advanced"
-  },
-  "authors": [
-    {
-      "name": "Memory Clutter",
-      "email": "memclutter@gmail.com"
-    }
-  ],
-  "require": {
-    "yiisoft/yii2": "~2.0.5"
-  },
-  "autoload": {
-    "psr-4": {
-      "yiisolutions\\migrations\\": "src/"
-    }
-  },
-  "repositories": [
-    {
-      "type": "composer",
-      "url": "https://asset-packagist.org"
-    }
-  ]
+    "name": "yiisolutions/yii2-migrations-advanced",
+    "type": "yii2-extension",
+    "description": "Advanced migrations for Yii2",
+    "keywords": [
+        "yii2",
+        "migrations",
+        "database",
+        "db",
+        "migrate"
+    ],
+    "license": "BSD-3-Clause",
+    "support": {
+        "issues": "https://github.com/yiisolutions/yii2-migrations-advanced/issues",
+        "source": "https://github.com/yiisolutions/yii2-migrations-advanced"
+    },
+    "authors": [
+        {
+            "name": "Memory Clutter",
+            "email": "memclutter@gmail.com"
+        }
+    ],
+    "require": {
+        "yiisoft/yii2": "~2.0.5"
+    },
+    "autoload": {
+        "psr-4": {
+            "yiisolutions\\migrations\\": "src/"
+        }
+    },
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "https://asset-packagist.org"
+        }
+    ]
 }
